# Python-Django-Docker-Azure-App-Services

./: .gitignore  Dockerfile  nginx.conf  pyproject.toml  readme.md  requirements.txt  supervisord.conf
core/: urls.py  views.py
core/migrations/: 0001_initial.py
core/templates/core/: create_item.html  item_list.html
myproject/: .dockerignore  settings.py  urls.py
